--- a/TIM/app/src/main/res/layout/activity_main.xml
+++ b/TIM/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,10 @@
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:id="@+id/container"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         </FrameLayout>
     </android.support.design.widget.CoordinatorLayout>
