--- a/TIM/app/src/main/res/drawable/switch_thumb_selector.xml
+++ b/TIM/app/src/main/res/drawable/switch_thumb_selector.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
- <shape
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="oval">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:radius="30dp"
+        />
 
     <size
-        android:width="25dp"
-        android:height="25dp" />
+        android:width="150dp"
+        android:height="40dp" />
 
     <solid
-        android:color="#FFFFFF" />
+        android:id="@+id/thumbColor"
+        android:color="#EEEEEE" />
 
     <stroke
+        android:id="@+id/strokeColor"
         android:width="1dp"
-        android:color="#FFFFFF" />
+        android:color="#EEEEEE" />
 
 </shape>
