--- a/TIM/app/src/main/res/drawable/switch_track_tomato.xml
+++ b/TIM/app/src/main/res/drawable/switch_track_tomato.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle" >
 
     <corners
-        android:radius="15dp" />
+        android:radius="30dp" />
     <size
-        android:width="75dp"
+        android:width="200dp"
         android:height="25dp" />
     <solid
-        android:color="#FF0000" />
+        android:color="#8C3232" />
     <stroke
         android:width="2dp"
-        android:color="#FF0000" />
+        android:color="#8C3232" />
 </shape>
