--- a/TIM/app/src/main/res/layout/activity_main.xml
+++ b/TIM/app/src/main/res/layout/activity_main.xml
@@ -14,25 +14,23 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryDark"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                android:background="@color/settingBg"
                 android:elevation="1dp"
-                android:id="@+id/toolbar">
-            </android.support.v7.widget.Toolbar>
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"></android.support.v7.widget.Toolbar>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/settingSeekBarBg"
                 android:elevation="1dp"
-                android:background="@android:color/background_light"
-                app:tabMode="fixed"
                 app:tabGravity="fill"
-                app:tabTextColor="@color/colorPrimary"
+                app:tabMode="fixed"
                 app:tabSelectedTextColor="@color/colorAccent"
-                >
+                app:tabTextColor="@color/colorPrimary">
 
             </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
